finish lerna setup

--- a/packages/data-fetcher/tsconfig.json
+++ b/packages/data-fetcher/tsconfig.json
@@ -12,7 +12,7 @@
         "sourceMap": true,
         "allowJs": false,
         "declaration": true,
-        "moduleResolution": "Node",
+        "moduleResolution": "node",
         "forceConsistentCasingInFileNames": true,
         "noImplicitReturns": true,
         "noImplicitThis": true,
