--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "lerna": "^3.22.1",
+    "jest": "^26.6.3"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --hoist --no-ci",
