--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nqframework/data-fetcher",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "A data fetcher component for the server and the connector client",
   "main": "build/index.js",
   "module": "build/index.es.js",
@@ -8,6 +8,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "start:dev": "tsc --watch",
     "lint": "",
     "format": "npm run lint",
@@ -39,11 +41,6 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "prettier": "^2.1.2",
-    "rollup": "^2.33.1",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.29.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "ts-node-dev": "^1.0.0",
@@ -60,8 +57,9 @@
     ]
   },
   "dependencies": {
-    "@nqframework/models": "^4.2.0",
+    "@nqframework/models": "^4.3.0",
     "@types/tedious": "^4.0.2",
+    "npm-check-updates": "^10.0.0",
     "tedious": "^9.2.1"
   },
   "jest": {
