--- a/packages/models/tsconfig.json
+++ b/packages/models/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "build",
-        "module": "esnext",
+        "module": "CommonJS",
         "target": "es5",
         "lib": [
             "es6",
@@ -31,6 +31,7 @@
     "exclude": [
         "node_modules",
         "build",
-        "**/*.spec.ts"
+        "**/*.spec.ts",
+        "**/quokka-*.ts"
     ]
 }
