--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -75,5 +75,6 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "gitHead": "cde44344a99abaec86193b5ce6d528811ae0d03c"
 }
