--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -30,22 +30,21 @@
   "author": "Milos Spasojevic",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "jest": "^25.5.4",
+    "@types/jest": "^26.0.15",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "rollup": "^2.33.1",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.26.0",
-    "ts-jest": "^25.5.1",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "@irreal/decorator-mapper": "^1.0.21",
     "npm-check-updates": "^10.0.0",
     "reflect-metadata": "^0.1.13"
-  }
+  },
+  "gitHead": "cde44344a99abaec86193b5ce6d528811ae0d03c"
 }
