--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -44,6 +44,7 @@
     "npm-check-updates": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "riot-tmpl": "^3.0.8",
     "rxjs": "^6.6.3",
     "tedious": "^9.2.1"
   },
