--- a/packages/nq-framework-app/package.json
+++ b/packages/nq-framework-app/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.0.0",
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@nqframework/models": "^4.3.9",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.2.2",
@@ -11,16 +15,19 @@
     "@types/node": "^12.19.4",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
+    "@types/react-router-dom": "^5.1.6",
     "framer-motion": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flow-renderer": "^8.0.0",
     "react-icons": "^3.11.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "typescript": "^3.9.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:dev": "cross-env PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
