add firebase auth, workflows page, workflow id to nq app. add get all workflows to server

--- a/packages/nq-framework-app/.env
+++ b/packages/nq-framework-app/.env
@@ -1,1 +1,4 @@
 REACT_APP_API_URL=http://localhost:3000/v1
+REACT_APP_API_KEY=AIzaSyB4L2ujEtbLHKgzk1_LiDuM6UQO4M5NZkE
+REACT_APP_AUTH_DOMAIN=nq-framework.firebaseapp.com
+REACT_APP_PROJECT_ID=nq-framework
