--- a/packages/nq-framework-app/package.json
+++ b/packages/nq-framework-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nq-framework-app",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^1.0.0",
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.9",
     "@types/react-router-dom": "^5.1.6",
     "firebase": "^8.1.1",
+    "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
