finish credentials and actions for api call and sql

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -41,6 +41,7 @@
     "@types/cron": "^1.7.2",
     "cron": "^1.8.2",
     "firebase-admin": "^9.4.0",
+    "node-fetch": "^2.6.1",
     "npm-check-updates": "^10.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -58,6 +59,7 @@
     "@types/socket.io": "^2.1.11",
     "@types/supertest": "^2.0.10",
     "@types/tedious": "^4.0.2",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "dotenv": "^8.2.0",
