disable auto push to git in package.json

--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -16,8 +16,7 @@
     "release": "standard-version",
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "version": "npm run format && git add -A src"
   },
   "files": [
     "build",
