--- a/packages/models/package.json
+++ b/packages/models/package.json
@@ -15,8 +15,7 @@
     "format": "npm run lint",
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "version": "npm run format && git add -A src"
   },
   "files": [
     "build",
