--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,8 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint && npm test",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "version": "npm run format && git add -A src"
   },
   "dependencies": {
     "@google-cloud/secret-manager": "^3.2.2",
