--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,15 +13,14 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepublishOnly": "npm test && npm run lint && npm run build",
-    "preversion": "npm run lint && npm test",
-    "version": "npm run format && git add -A src"
+    "preversion": "npm run lint && npm test"
   },
   "dependencies": {
     "@google-cloud/secret-manager": "^3.2.2",
