--- a/packages/nq-framework-app/package.json
+++ b/packages/nq-framework-app/package.json
@@ -19,6 +19,9 @@
     "firebase": "^8.1.1",
     "formik": "^2.2.5",
     "framer-motion": "^2.9.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-firebaseui": "^4.1.0",
@@ -37,6 +40,16 @@
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   },
   "browserslist": {
     "production": [
