--- a/packages/nq-framework-app/package.json
+++ b/packages/nq-framework-app/package.json
@@ -36,7 +36,8 @@
     "start:dev": "cross-env PORT=3006 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
