--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -11,9 +11,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "start:dev": "tsc --watch",
-    "lint": "",
-    "format": "npm run lint",
-    "release": "standard-version",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
     "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src"
@@ -36,6 +35,11 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
