--- a/packages/data-fetcher/package.json
+++ b/packages/data-fetcher/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:coverage-full": "jest --collectCoverageFrom='[\"**/*.ts\"]' --coverage",
     "start:dev": "tsc --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
